fix compilation flags

--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -1,7 +1,7 @@
 NAME := unnecessary_violence
 CC := g++
 
-CFLAGS ?= #-Wall -Werror -Wextra
+CFLAGS ?= -Wall -Werror -Wextra
 ifdef DEBUG
 CFLAGS := -g $(CFLAGS)
 endif
