--- a/cpp01/ex05/Makefile
+++ b/cpp01/ex05/Makefile
@@ -1,7 +1,7 @@
 NAME := karen
 CC := g++
 
-CFLAGS ?= #-Wall -Werror -Wextra
+CFLAGS ?= -Wall -Werror -Wextra
 ifdef DEBUG
 CFLAGS := -g $(CFLAGS)
 endif
