--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -1,7 +1,7 @@
 NAME := replace
 CC := g++
 
-CFLAGS ?= #-Wall -Werror -Wextra
+CFLAGS ?= -Wall -Werror -Wextra
 ifdef DEBUG
 CFLAGS := -g $(CFLAGS)
 endif
