--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -1,7 +1,7 @@
 NAME := megaphone
-CC := g++
+CC := c++
 
-CFLAGS ?= -Wall -Werror -Wextra
+CFLAGS ?= -Wall -Werror -Wextra -std=c++98
 ifdef DEBUG
 CFLAGS := -g $(CFLAGS)
 endif
