--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,7 +1,7 @@
 NAME := Hyper-Phonograph-Connection-Databook-9000
-CC := g++
+CC := c++
 
-CFLAGS ?= -Wall -Werror -Wextra
+CFLAGS ?= -Wall -Werror -Wextra -std=c++98
 ifdef DEBUG
 CFLAGS := -g $(CFLAGS)
 endif
